methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:24: error: Unit does not take parameters
run() {
      ^